add dep for example with temp+humidity

--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=This is an Arduino library for the Adafruit SGP40 Gas / Air Quality Se
 category=Sensors
 url=https://github.com/adafruit/Adafruit_SGP40
 architectures=*
-depends=Adafruit BusIO
+depends=Adafruit BusIO, Adafruit SHT31 Library
